fixing full screenmode bug

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    android:clipToPadding="false"
+    android:clipToPadding="true"
     android:paddingTop="0dp"
     android:paddingBottom="0dp"
     android:scrollbars="vertical"
