--- a/app/src/main/res/layout/layout_scan_button.xml
+++ b/app/src/main/res/layout/layout_scan_button.xml
@@ -13,6 +13,7 @@
         android:minWidth="0dp"
         android:minHeight="0dp"
         app:icon="@drawable/ic_refresh_white"
+        app:iconTint="@android:color/white"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
         android:padding="8dp"
