--- a/app/src/main/res/values-zh-rTW/arrays.xml
+++ b/app/src/main/res/values-zh-rTW/arrays.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="night_mode">
-        <item>自動 (時間)</item>
+        <item>自動 (日出/日落)</item>
         <item>日間</item>
         <item>夜間</item>
-        <item>自動 (時間 + GPS)</item>
+        <item>手動時間</item>
         <item>光傳感器</item>
         <item>屏幕亮度</item>
     </string-array>
