Fix hardcoded 'Android Auto is starting...' string
- Add android_auto_starting string resource
- Update activity_headunit.xml to use string resource
- Add Spanish translation

--- a/app/src/main/res/layout/activity_headunit.xml
+++ b/app/src/main/res/layout/activity_headunit.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Android Auto is starting..."
+            android:text="@string/android_auto_starting"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
     </LinearLayout>
